--- a/casino/slot.css
+++ b/casino/slot.css
@@ -6,7 +6,7 @@ body {
     body {background-color: white;} 
     
 .button {
-        background-color: #4CAF50;
+        background-color: blue;
         border: none;
         color: white;
         padding: 15px 32px;
