--- a/viestiseinä/seinä.css
+++ b/viestiseinä/seinä.css
@@ -1,16 +1,32 @@
-body {
+h2 {
     font-family: 'Mukta', sans-serif;
 }
 .button1 {
-    background-color: blue;
-    border: none;
-    color: white;
-    padding: 15px 28px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+        padding: 8px 8px;
+        margin-left: 10px;
+        font-size: 16px;
+        text-align: center;
+        cursor: pointer;
+        outline: none;
+        color: #fff;
+        background-color: black;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0 9px #999;;
+        }
+        .button1:active {
+        background-color: blue;
+        box-shadow: 0 5px #666;
+        transform: translateY(4px);
+        
 }
-    
+div.a {
+    text-align: center;
+}
+h1 {
+    font-family: 'Patua One', cursive;    
+}
+h2 {
+    color: blue
+}
+   
